# mtrn4231_jakos

./: .gitignore  CARTESIAN_CONTROL_README.md  CMakeLists.txt  DASHBOARD_README.md  DEPENDENCIES.md  GRIPPER_INTEGRATION.md  HEIGHT_CONTROL_GUIDE.md  README.md  SIMPLE_PICK_AND_WEIGH_GUIDE.md  SORTING_SYSTEM_PLAN.md  SQUARE_MOVEMENT_USAGE.md  SYSTEM_MODES.md  TESTING_WEIGHT_DETECTION.md  WEIGHT_INTEGRATION.md  fastdds.xml  opencv_processor_node.cpp  package.xml  servo3.ino  test_square_movement.sh
ros2_system/src/control_module/: CMakeLists.txt  GRIPPER_README.md  package.xml
ros2_system/src/control_module/config/: control.yaml  gripper_params.yaml
ros2_system/src/control_module/launch/: control.launch.py  gripper_sim.launch.py  gripper_sim_with_interface.launch.py
ros2_system/src/control_module/meshes/: gripper.stl
ros2_system/src/control_module/src/: pick_operation_node.cpp  place_operation_node.cpp  robot_driver_node.cpp
ros2_system/src/control_module/test/: test_gripper_hardware.py  test_gripper_simulation.py
ros2_system/src/control_package/: CMakeLists.txt  package.xml
ros2_system/src/control_package/include/: simple_serial.hpp
ros2_system/src/control_package/src/: gripper_controller_node.cpp
ros2_system/src/motion_control_module/: CMakeLists.txt  JOINT_MOVEMENT_README.md  README.md  TEENSY_SETUP.md  package.xml
ros2_system/src/motion_control_module/config/: motion_control.yaml  sorting_system.rviz
ros2_system/src/motion_control_module/launch/: gripper_hardware.launch.py  gripper_hardware_with_interface.launch.py  motion_control.launch.py  ur5e_fake_with_ee.launch.py  ur5e_moveit_with_gripper.launch.py  ur5e_real_with_gripper.launch.py
ros2_system/src/motion_control_module/scripts/: action_cartesian_client.py  action_cartesian_controller.py  cartesian_movement_client.py  cartesian_movement_controller.py  cartesian_robot.py  check_joint_states.py  check_simulated_positions.py  check_tcp_position.py  end_effector_map.py  end_effector_visualizer.py  final_cartesian_controller.py  go_home.py  joint_movement_client_example.py  minimal_action_test.py  move_cartesian_simple.py  move_gripper_down.py  move_to_home_joint.py  pick_and_place_demo.py  pickup_movement.py  pickup_movement_simple.py  pickup_movement_v2.py  safety_boundary_collision.py  safety_boundary_visualizer.py  simple_cartesian_controller.py  simple_pick_and_weigh.py  square_movement.py  square_movement_safe.py  square_movement_simple.py  test_cartesian_robot.py  test_execute_trajectory.py  test_home_position.py  test_workspace.py  working_cartesian_controller.py
ros2_system/src/motion_control_module/src/: cartesian_controller_node.cpp  gripper_button_interface.cpp  gripper_controller_node.cpp  joint_movement_controller.cpp  safety_boundary_node.cpp  simple_pick_and_weigh_node.cpp
ros2_system/src/motion_control_module/srdf/: ur5e_with_gripper.srdf.xacro
ros2_system/src/motion_control_module/urdf/: end_effector.urdf.xacro  gripper.urdf  ur5e_with_end_effector.urdf.xacro
ros2_system/src/motion_control_package/: CMakeLists.txt  package.xml
ros2_system/src/motion_control_package/config/: ur_controllers_with_home.yaml
ros2_system/src/motion_control_package/launch/: ur5e_moveit_with_gripper.launch.py
ros2_system/src/motion_control_package/scripts/: go_home.py  safety_boundary_collision.py
ros2_system/src/motion_control_package/src/: cartesian_controller_node.cpp  simple_pick_and_weigh_node.cpp
ros2_system/src/motion_control_package/srdf/: ur5e_with_gripper.srdf.xacro
ros2_system/src/motion_control_package/urdf/: end_effector.urdf.xacro  gripper.urdf  ur5e_with_end_effector.urdf.xacro
ros2_system/src/perception_module/: CMakeLists.txt  README.md  README_RGBD_CAMERA.md  README_YOLO.txt  package.xml  setup.py
ros2_system/src/perception_module/config/: perception.yaml
ros2_system/src/perception_module/launch/: object_detect.launch.py  object_detect2.launch .py  perception.launch.py  rgbd_camera_with_recording.launch.py
ros2_system/src/perception_module/perception_module/: __init__.py  object_detect_yolo.py  object_detect_yolo2.py
ros2_system/src/perception_module/red_object.v3/: README.roboflow.txt  which_train.txt
ros2_system/src/perception_module/scripts/: test_camera_publisher.py
ros2_system/src/perception_module/src/: opencv_processor_node.cpp  pointcloud_processor_node.cpp  rgbd_camera_node.cpp
ros2_system/src/planning_module/: CMakeLists.txt  TESTING_SUMMARY.md  package.xml
ros2_system/src/planning_module/config/: planning.yaml
ros2_system/src/planning_module/launch/: planning.launch.py
ros2_system/src/planning_module/src/: integrity_node.cpp  moveit2_interface_node.cpp  sort_node.cpp  verification_node.cpp
ros2_system/src/planning_module/test/: QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  TEST_ARCHITECTURE.md  launch_for_testing.launch.py  run_tests.sh  test_integrity_node.py  test_moveit2_interface_node.py  test_sort_node.py  test_verification_node.py
ros2_system/src/recognition_module/: BAG_RECORDING.md  CMakeLists.txt  COMMUNICATION_PATTERN.md  GAZEBO_SIMULATION.md  QUICK_START.md  README.md  README_weight_simulation.md  TESTING.md  package.xml
ros2_system/src/recognition_module/config/: recognition.yaml
ros2_system/src/recognition_module/launch/: gazebo_simulation.launch.py  playback_test.launch.py  recognition.launch.py  recognition_with_mock_camera.launch.py
ros2_system/src/recognition_module/scripts/: START_HERE.md  TEST_GUIDE.md  WORKING_VERSION_README.md  example_automated_test.py  record_bag.py  record_test_data.sh  simple_weight_simulation.py  spawn_objects.py
ros2_system/src/recognition_module/src/: mock_camera_node.cpp  recognition_node.cpp  weight_estimation_node.cpp
ros2_system/src/recognition_module/test/: README.md  (+2 more)
ros2_system/src/sort_interfaces/: CMakeLists.txt  package.xml
ros2_system/src/supervisor_module/: CMakeLists.txt  DASHBOARD_README.md  INSTALLATION.md  JOINT_MOVEMENT_README.md  package.xml  setup.py
ros2_system/src/weight_detection_package/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
(+261 files in other folders)
